--- a/HealthInsuranceService/src/main/resources/application.properties
+++ b/HealthInsuranceService/src/main/resources/application.properties
@@ -1,1 +1,40 @@
-spring.application.name=HealthInsuranceService
+#SPRING BOOT CONFIGURATION
+spring.application.name=health-insurance-service
+server.port=8083
+server.servlet.context-path=/api/v1
+
+#SPRING SECURITY CONFIGURATION
+spring.security.user.name=${SS_USER}
+spring.security.user.password=${SS_PASSWORD}
+
+#DATABASE CONFIGURATION
+##JPA/HIBERNATE
+spring.jpa.hibernate.ddl-auto=${DDL_AUTO:update}
+spring.jpa.show-sql=${SHOW_SQL:false}
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.open-in-view=false
+
+## DATABASE CONNECTION
+spring.datasource.url=${BD_URL}
+spring.datasource.username=${BD_USER}
+spring.datasource.password=${BD_PASSWORD}
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+#POOL CONNECTION
+spring.datasource.hikari.maximum-pool-size=20 
+spring.datasource.hikari.minimum-idle=5 
+spring.datasource.hikari.connection-timeout=30000 
+spring.datasource.hikari.idle-timeout=600000 
+spring.datasource.hikari.max-lifetime=1800000
+
+#JWT CONFIGURATION
+app.jwt.secret=${JWT_SECRET}
+app.jwt.expiration-ms=${JWT_EXPIRATION_MS:1800000} 
+app.jwt.issuer=${JWT_ISSUER}
+app.jwt.refresh-expiration-ms=${JWT_REFRESH_EXPIRATION_MS:86400000}
+security.jwt.private.key=${JWT_SECRET}
+security.jwt.user.generator=${JWT_ISSUER}
+
+#PROFILE SPECIFIC SETTINGS
+spring.profiles.active=${SPRING_PROFILE:dev}
