--- a/HealthInsuranceService/src/main/resources/application.properties
+++ b/HealthInsuranceService/src/main/resources/application.properties
@@ -38,3 +38,7 @@ security.jwt.user.generator=${JWT_ISSUER}
 
 #PROFILE SPECIFIC SETTINGS
 spring.profiles.active=${SPRING_PROFILE:dev}
+
+
+#FEING
+user-service.url=http://localhost:8084/api/v1
