- bug fixes, services up and running

--- a/AppointmentService/src/main/resources/application.properties
+++ b/AppointmentService/src/main/resources/application.properties
@@ -42,3 +42,4 @@ spring.profiles.active=${SPRING_PROFILE:dev}
 #FEING
 user-service.url=http://localhost:8084/api/v1
 calendar-service.url=http://localhost:8082/api/v1
+health-insurance-service.url=http://localhost:8083/api/v1
