--- a/AppointmentService/src/main/resources/application.properties
+++ b/AppointmentService/src/main/resources/application.properties
@@ -43,3 +43,6 @@ spring.profiles.active=${SPRING_PROFILE:dev}
 user-service.url=http://localhost:8084/api/v1
 calendar-service.url=http://localhost:8082/api/v1
 health-insurance-service.url=http://localhost:8083/api/v1
+
+#EUREKA SERVER
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
