--- a/CalendarService/src/main/resources/application.properties
+++ b/CalendarService/src/main/resources/application.properties
@@ -42,3 +42,5 @@ spring.profiles.active=${SPRING_PROFILE:dev}
 
 #FEING
 user-service.url=http://localhost:8084/api/v1
+#EUREKA SERVER
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
