--- a/UserService/src/main/resources/application.properties
+++ b/UserService/src/main/resources/application.properties
@@ -38,3 +38,5 @@ security.jwt.user.generator=${JWT_ISSUER}
 
 #PROFILE SPECIFIC SETTINGS
 spring.profiles.active=${SPRING_PROFILE:dev}
+#EUREKA SERVER
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
