- Implementation of the Gateway Service. - Implementation of Open Feing for communication between the API Gateway and UserService services. - Implementation of Spring Security with JWT in the API Gateway and ServiceUser services. - Implementation of the DataInitializer class to create the first Secretary when initialising the app for the first time.

--- a/AppointmentService/src/main/resources/application.properties
+++ b/AppointmentService/src/main/resources/application.properties
@@ -46,3 +46,16 @@ health-insurance-service.url=http://localhost:8083/api/v1
 
 #EUREKA SERVER
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+
+#CIRCUIT BREAKER
+resilience4j.circuitbreaker.instances.appointment-service.failure-rate-threshold=50
+resilience4j.circuitbreaker.instances.appointment-service.sliding-window-size=10
+resilience4j.circuitbreaker.instances.appointment-service.wait-duration-in-open-state=10s
+resilience4j.circuitbreaker.instances.appointment-service.minimum-number-of-calls=5
+resilience4j.circuitbreaker.instances.appointment-service.automatic-transition-from-open-to-half-open-enabled=true
+resilience4j.circuitbreaker.instances.appointment-service.permitted-number-of-calls-in-half-open-state=3
+
+# Monitoring
+management.endpoints.web.exposure.include=health,circuitbreakers
+management.endpoint.health.show-details=always
+management.health.circuitbreakers.enabled=true
