--- a/CalendarService/src/main/resources/application.properties
+++ b/CalendarService/src/main/resources/application.properties
@@ -44,3 +44,16 @@ spring.profiles.active=${SPRING_PROFILE:dev}
 user-service.url=http://localhost:8084/api/v1
 #EUREKA SERVER
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+
+#CIRCUIT BREAKER
+resilience4j.circuitbreaker.instances.calendar-service.failure-rate-threshold=50
+resilience4j.circuitbreaker.instances.calendar-service.sliding-window-size=10
+resilience4j.circuitbreaker.instances.calendar-service.wait-duration-in-open-state=10s
+resilience4j.circuitbreaker.instances.calendar-service.minimum-number-of-calls=5
+resilience4j.circuitbreaker.instances.calendar-service.automatic-transition-from-open-to-half-open-enabled=true
+resilience4j.circuitbreaker.instances.calendar-service.permitted-number-of-calls-in-half-open-state=3
+
+# Monitoring
+management.endpoints.web.exposure.include=health,circuitbreakers
+management.endpoint.health.show-details=always
+management.health.circuitbreakers.enabled=true
