--- a/UserService/src/main/resources/application.properties
+++ b/UserService/src/main/resources/application.properties
@@ -3,9 +3,6 @@ spring.application.name=user-service
 server.port=8084
 server.servlet.context-path=/api/v1
 
-#SPRING SECURITY CONFIGURATION
-spring.security.user.name=${SS_USER}
-spring.security.user.password=${SS_PASSWORD}
 
 #DATABASE CONFIGURATION
 ##JPA/HIBERNATE
@@ -30,13 +27,25 @@ spring.datasource.hikari.max-lifetime=1800000
 
 #JWT CONFIGURATION
 app.jwt.secret=${JWT_SECRET}
-app.jwt.expiration-ms=${JWT_EXPIRATION_MS:1800000} 
 app.jwt.issuer=${JWT_ISSUER}
-app.jwt.refresh-expiration-ms=${JWT_REFRESH_EXPIRATION_MS:86400000}
-security.jwt.private.key=${JWT_SECRET}
-security.jwt.user.generator=${JWT_ISSUER}
+app.jwt.expiration-minutes=${JWT_EXPIRATION_MINUTES:60}
 
 #PROFILE SPECIFIC SETTINGS
 spring.profiles.active=${SPRING_PROFILE:dev}
 #EUREKA SERVER
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+
+#CIRCUIT BREAKER
+resilience4j.circuitbreaker.instances.user-service.failure-rate-threshold=50
+resilience4j.circuitbreaker.instances.user-service.sliding-window-size=10
+resilience4j.circuitbreaker.instances.user-service.wait-duration-in-open-state=10s
+resilience4j.circuitbreaker.instances.user-service.minimum-number-of-calls=5
+resilience4j.circuitbreaker.instances.user-service.automatic-transition-from-open-to-half-open-enabled=true
+resilience4j.circuitbreaker.instances.user-service.permitted-number-of-calls-in-half-open-state=3
+
+# Monitoring
+management.endpoints.web.exposure.include=health,circuitbreakers
+management.endpoint.health.show-details=always
+management.health.circuitbreakers.enabled=true
+
+
