feat: add shared-security module and apply access control in microservices
- The shared-security module was implemented to centralise the security configurations used by multiple microservices, mainly the token validation logic.

- The SecurityService was added to control access permissions, verifying roles (e.g., secretary) and validating that the client ID matches that of the token credentials.

- Each microservice incorporated the dependency on the shared-security module to reuse its configurations and functionalities.

- @PreAuthorise was applied to the microservice endpoints to reinforce access control according to roles and authorisation rules.

--- a/CalendarService/pom.xml
+++ b/CalendarService/pom.xml
@@ -108,29 +108,30 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-aop</artifactId>
 		</dependency>
-		<!-- JWT Dependencies -->
+		<!-- Spring Security (para BCrypt) -->
 		<dependency>
-			<groupId>io.jsonwebtoken</groupId>
-			<artifactId>jjwt-api</artifactId>
-			<version>0.12.6</version>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
+
+		<!-- JWT (Auth0 - misma versión que Gateway) -->
 		<dependency>
-			<groupId>io.jsonwebtoken</groupId>
-			<artifactId>jjwt-impl</artifactId>
-			<version>0.12.6</version>
-			<scope>runtime</scope>
+			<groupId>com.auth0</groupId>
+			<artifactId>java-jwt</artifactId>
+			<version>4.4.0</version>
 		</dependency>
-		<dependency>
-			<groupId>io.jsonwebtoken</groupId>
-			<artifactId>jjwt-jackson</artifactId>
-			<version>0.12.6</version>
-			<scope>runtime</scope>
-		</dependency>
+
 
 		<!-- Spring Security to validate JWT -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.sanatoryApp</groupId>
+			<artifactId>shared-security</artifactId>
+			<version>1.0.0</version>
+			<scope>compile</scope>
 		</dependency>
 	</dependencies>
 
