--- a/HealthInsuranceService/src/main/resources/application.properties
+++ b/HealthInsuranceService/src/main/resources/application.properties
@@ -3,9 +3,6 @@ spring.application.name=health-insurance-service
 server.port=8083
 server.servlet.context-path=/api/v1
 
-#SPRING SECURITY CONFIGURATION
-spring.security.user.name=${SS_USER}
-spring.security.user.password=${SS_PASSWORD}
 
 #DATABASE CONFIGURATION
 ##JPA/HIBERNATE
@@ -28,13 +25,11 @@ spring.datasource.hikari.connection-timeout=30000
 spring.datasource.hikari.idle-timeout=600000 
 spring.datasource.hikari.max-lifetime=1800000
 
+
 #JWT CONFIGURATION
 app.jwt.secret=${JWT_SECRET}
-app.jwt.expiration-ms=${JWT_EXPIRATION_MS:1800000} 
 app.jwt.issuer=${JWT_ISSUER}
-app.jwt.refresh-expiration-ms=${JWT_REFRESH_EXPIRATION_MS:86400000}
-security.jwt.private.key=${JWT_SECRET}
-security.jwt.user.generator=${JWT_ISSUER}
+app.jwt.expiration-minutes=${JWT_EXPIRATION_MINUTES:60}
 
 #PROFILE SPECIFIC SETTINGS
 spring.profiles.active=${SPRING_PROFILE:dev}
