--- a/UserService/pom.xml
+++ b/UserService/pom.xml
@@ -122,6 +122,12 @@
 			<artifactId>java-jwt</artifactId>
 			<version>4.4.0</version>
 		</dependency>
+		<dependency>
+			<groupId>com.sanatoryApp</groupId>
+			<artifactId>shared-security</artifactId>
+			<version>1.0.0</version>
+			<scope>compile</scope>
+		</dependency>
 	</dependencies>
 
 
