--- a/AppointmentService/src/main/resources/application.properties
+++ b/AppointmentService/src/main/resources/application.properties
@@ -28,13 +28,11 @@ spring.datasource.hikari.connection-timeout=30000
 spring.datasource.hikari.idle-timeout=600000 
 spring.datasource.hikari.max-lifetime=1800000
 
+
 #JWT CONFIGURATION
 app.jwt.secret=${JWT_SECRET}
-app.jwt.expiration-ms=${JWT_EXPIRATION_MS:1800000} 
 app.jwt.issuer=${JWT_ISSUER}
-app.jwt.refresh-expiration-ms=${JWT_REFRESH_EXPIRATION_MS:86400000}
-security.jwt.private.key=${JWT_SECRET}
-security.jwt.user.generator=${JWT_ISSUER}
+app.jwt.expiration-minutes=${JWT_EXPIRATION_MINUTES:60}
 
 #PROFILE SPECIFIC SETTINGS
 spring.profiles.active=${SPRING_PROFILE:dev}
