--- a/AppointmentService/pom.xml
+++ b/AppointmentService/pom.xml
@@ -143,6 +143,11 @@
 			<scope>compile</scope>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-config</artifactId>
+		</dependency>
+
 	</dependencies>
 
 	<build>
